--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Web-AR</title>
 </head>
 <body>
-    <canvas id="renderCanvas"></canvas>
+    <canvas id="renderCanvas" style="display: none"></canvas>
+    <div class="output"></div>
 </body>
 </html>
