added web-ar library

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.js"></script>
     <!-- client code -->
+
+    <script src="web-ar-library.js"></script>
     <script src="index.js"></script>
     <title>Web-AR</title>
 </head>
