reworked web ar into the three js

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="index.css">
 
-    <!-- Babylon.js -->
-    <script src="https://preview.babylonjs.com/babylon.js"></script>
-    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.js"></script>
-    <!-- client code -->
-
+    <script src="build/three.js"></script>
+    <script src="build/objLoader.js"></script>
     <script src="web-ar-library.js"></script>
     <script src="index.js"></script>
+
     <title>Web-AR</title>
 </head>
 <body>
-    <canvas id="renderCanvas"></canvas>
 </body>
 </html>
